# kedro-graphql

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CHANGELOG.md  Caddyfile  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  api-auth.yaml  api.yaml  dex-config.yaml  docker-compose.yaml  example.env  k3d-cluster.yaml  mkdocs.yml  oauth2-proxy.cfg  pydoc-markdown.yaml  pyproject.toml  spec-api-auth.yaml  spec-api.yaml  spec-ui-auth.yaml  spec-ui.yaml  ui.yaml  viz-demo.docker-compose.yaml
.github/workflows/: container.yml  publish.yml  test.yml
conf/: logging.yml
conf/base/: catalog.yml
conf/base/parameters/: example00.yml
docs/: architecture.md  configuration.md  development.md  events.md  extend_application.md  extend_graphql.md  extend_permissions.md  extend_pre_signed_url_provider.md  extend_signed_url_provider.md  index.md  pydoc.md  quickstart.md  ui.md
docs/source/: conf.py  index.rst
notebooks/: 20241015_kedro-graphql-roadmap.ipynb  kedro-graphql-viz.ipynb  kedro_graphql_client.ipynb
src/: requirements.txt  requirements_optional.txt  setup.py
src/kedro_graphql/: __init__.py  __main__.py  asgi.py  celeryapp.py  celeryconfig.py  client.py  commands.py  config.py  decorators.py  events.py  exceptions.py  hooks.py  models.py  permissions.py  pipeline_event_monitor.py  plugin.py  schema.py  settings.py  start-api.sh  start-worker.sh  tasks.py  ui-auth.yaml  ui.yaml  utils.py
src/kedro_graphql/auth/oidc/: __init__.py  dependencies.py
src/kedro_graphql/backends/: __init__.py  base.py  mongodb.py
src/kedro_graphql/example/: app.py
src/kedro_graphql/logs/: json_log_formatter.py  logger.py
src/kedro_graphql/pipelines/event00/: __init__.py  nodes.py  pipeline.py
src/kedro_graphql/pipelines/example00/: README.md  __init__.py  nodes.py  pipeline.py
src/kedro_graphql/pipelines/example01/: __init__.py  nodes.py  pipeline.py
src/kedro_graphql/plugins/: plugins.py
src/kedro_graphql/plugins/presigned_url/: base.py  local_file_provider.py  s3_provider.py
src/kedro_graphql/presigned_url/: local_file_provider.py  s3_provider.py
src/kedro_graphql/runner/: __init__.py  argo.py
src/kedro_graphql/runner/argo/: __init__.py  argo.py
src/kedro_graphql/runner/templates/: argo_spec.tmpl
src/kedro_graphql/runners/: __init__.py
src/kedro_graphql/runners/argo/templates/: argo_spec.tmpl
src/kedro_graphql/signed_url/: base.py  local_file_provider.py  s3_provider.py
src/kedro_graphql/static/: queries.gql
src/kedro_graphql/ui/: app copy.py  app.py  auth.py  client.py  decorators.py  plugins.py  ui-auth.yaml  ui-dataset-viewer.yaml  ui.yaml
src/kedro_graphql/ui/assets/: example-data-catalog.csv
src/kedro_graphql/ui/components/: data_catalog.py  data_catalog_explorer.py  data_catalog_table.py  data_frame_viewer.py  dataset_card.py  dataset_perspective.py  form_loader.py  form_submit.py  pipeline_card.py  pipeline_cards.py  pipeline_cloning.py  pipeline_dashboard_factory.py  pipeline_detail.py  pipeline_form_factory.py  pipeline_monitor.py  pipeline_retry.py  pipeline_search.py  pipeline_viz.py  progress_card.py  run_progress.py  sidebar.py  template.py  template_main_factory.py
src/kedro_graphql/ui/components/forms/example00/: example00.py
src/kedro_graphql/ui/components/forms/example00/templates/: catalog.json  catalog.yaml  parameters.yaml  template.json
src/kedro_graphql/ui/components/forms/templates/: extra.yaml
src/kedro_graphql/ui/pages/: data_explorer.py  pipelines.py  runs.py
src/kedro_graphql/ui/pages/run/: form.py  progress.py  submit.py
src/kedro_graphql/viz/: app.py  client.py  decorators.py
src/kedro_graphql/viz/components/: pipeline_cards.py  pipeline_data_factory.py  pipeline_datacatalog.py  pipeline_detail.py  pipeline_form_factory.py  pipeline_monitor.py  pipeline_search.py  settings.py  template.py
src/tests/: conftest.py  test_asgi.py  test_backends.py  test_client.py  test_config.py  test_events.py  test_logs.py  test_models.py  test_permissions.py  test_pipeline_event_monitor.py  test_pipeline_sanitizer.py  test_run.py  test_runner_argo.py  test_schema.py  test_schema_extensions.py  test_schema_mutation.py  test_schema_query.py  test_schema_subscription.py  test_signed_url.py  test_tasks.py  test_utils.py  utilities.py
src/tests/pipelines/example00/: test_pipeline.py
src/tests/pipelines/example01/: test_pipeline.py
src/tests/runner/: conftest.py  test_runner_argo.py
src/tests/runner/argo/: conftest.py  test_runner_argo.py
src/tests/runners/argo/: conftest.py  test_runner_argo.py
src/tests/test_signed_url/: test_local_file_provider.py  test_s3_provider.py
src/tests/viz/components/: conftest.py  test_pipeline_search.py
